8237746: Fixing compiler warnings in src/demo/share/jfc
Reviewed-by: kizune, aivanov